# Clearch

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  PKGBUILD  README.md  build.sh  os-scraper  packager.py
.github/workflows/: release.yaml
src/: main.rs  os_scraper.rs  prompt  test.json  traits.rs
src/llms/: claude.rs  gemini.rs  gpt.rs  groq.rs  mod.rs
