[package]
name = "clearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
panic = "abort"

[dependencies]
dotenv = "0.15.0"
serde_json = "1.0.108"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35.1", features = ["full"] }
clap = { version = "4.4.11", features = ["derive"] }
sys-info = "0.9.1"
clap-stdin = "0.4.0"
